# disfs

./: .gitignore  CMakeLists.txt  LICENSE  MODULE.bazel
app/: BUILD  CMakeLists.txt
app/src/: main.c
lib/: BUILD  CMakeLists.txt
lib/include/: connection.h  err_codes.h  file_menager.h  lib.h  logger.h  udp_discovery.h
lib/src/: connection.c  file_menager.c  lib.c  udp_discovery.c
lib/tests/: simple_test.c  udp_packet_test.c
